go to bootstrap 4

--- a/bower.json
+++ b/bower.json
@@ -19,7 +19,10 @@
     "tests"
   ],
   "devDependencies": {
-    "bootstrap": "~3.3.6",
-    "prism": "^1.6.0"
+    "prism": "^1.6.0",
+    "bootstrap": "v4.0.0-alpha.6"
+  },
+  "resolutions": {
+    "bootstrap": "v4.0.0-alpha.6"
   }
 }
