--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "accordion-plugin",
+  "name": "accordion-js",
   "version": "1.0.0",
   "description": "accordion js",
   "main": "src/accordion-plugin.js",
