--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "accordion-plugin",
+  "name": "accordion-js",
   "description": "accordion js",
   "main": "README.md",
   "authors": [
@@ -19,7 +19,6 @@
     "tests"
   ],
   "devDependencies": {
-    "prism": "^1.6.0",
     "bootstrap": "v4.0.0-alpha.6"
   },
   "resolutions": {
