--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,12 @@
-/Source
+# Build
+build/
 
-# Web Storm
-.idea
+# WebStorm
+.idea/
 
 # Node
-node_modules
+node_modules/
+*.log
 
 # Bower
-bower_components
+bower_components/
