--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "accordion-js",
   "version": "1.0.0",
   "description": "accordion js",
-  "main": "src/accordion-plugin.js",
+  "main": "src/accordion.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -20,6 +20,11 @@
   },
   "homepage": "https://github.com/pure-js/accordion-plugin#readme",
   "devDependencies": {
+    "browser-sync": "^2.18.6",
+    "del": "^2.2.2",
+    "gulp": "github:gulpjs/gulp#4.0",
+    "gulp-gh-pages": "^0.5.4",
+    "gulp-load-plugins": "^1.4.0",
     "jshint": "^2.8.0",
     "prismjs": "^1.6.0"
   }
