--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "accordion js",
   "main": "src/accordion.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "gulp test",
+    "test": "eslint src/accordion.js",
+    "deploy": "gulp deploy",
+    "postinstall": "bower install"
   },
   "repository": {
     "type": "git",
@@ -22,10 +25,12 @@
   "devDependencies": {
     "browser-sync": "^2.18.6",
     "del": "^2.2.2",
+    "eslint": "^3.19.0",
+    "eslint-config-airbnb-base": "^11.1.3",
+    "eslint-plugin-import": "^2.2.0",
     "gulp": "github:gulpjs/gulp#4.0",
     "gulp-gh-pages": "^0.5.4",
     "gulp-load-plugins": "^1.4.0",
-    "jshint": "^2.8.0",
     "prismjs": "^1.6.0"
   }
 }
