--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "gulp dev",
     "build": "gulp build",
+    "clean": "gulp clean",
     "test": "eslint src/accordion.js",
     "deploy": "gulp deploy",
     "postinstall": "bower install"
@@ -30,6 +31,7 @@
     "eslint-config-airbnb-base": "^11.1.3",
     "eslint-plugin-import": "^2.2.0",
     "gulp": "github:gulpjs/gulp#4.0",
+    "gulp-babili": "0.0.2",
     "gulp-gh-pages": "^0.5.4",
     "gulp-plumber": "^1.1.0",
     "gulp-pug": "^3.3.0",
