--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "build": "gulp build",
     "clean": "gulp clean",
     "test": "eslint src/accordion.js",
-    "deploy": "gulp deploy",
-    "postinstall": "bower install"
+    "deploy": "gulp deploy"
   },
   "repository": {
     "type": "git",
@@ -31,15 +30,16 @@
     "eslint-config-airbnb-base": "^11.1.3",
     "eslint-plugin-import": "^2.2.0",
     "gulp": "github:gulpjs/gulp#4.0",
-    "gulp-babili": "0.0.2",
+    "gulp-babili": "0.1.2",
     "gulp-gh-pages": "^0.5.4",
     "gulp-plumber": "^1.1.0",
     "gulp-pug": "^3.3.0",
     "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "^2.6.0",
+    "gulp-load-plugins": "^1.5.0",
     "prismjs": "^1.6.0"
   },
   "dependencies": {
-    "gulp-load-plugins": "^1.5.0"
+    "bootstrap": "^4.0.0-alpha.6"
   }
 }
