--- a/package.json
+++ b/package.json
@@ -24,15 +24,12 @@
   },
   "homepage": "https://github.com/pure-js/accordion-plugin#readme",
   "devDependencies": {
-    "browser-sync": "^2.18.13",
     "del": "^3.0.0",
     "eslint": "^4.10.0",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.8.0",
-    "gulp": "github:gulpjs/gulp#4.0",
     "gulp-babili": "^0.1.4",
     "gulp-gh-pages": "^0.5.4",
-    "gulp-load-plugins": "^1.5.0",
     "gulp-plumber": "^1.1.0",
     "gulp-pug": "^3.3.0",
     "gulp-rename": "^1.2.2",
@@ -40,6 +37,9 @@
     "prismjs": "^1.8.4"
   },
   "dependencies": {
-    "bootstrap": "^4.0.0-beta.2"
+    "bootstrap": "^4.0.0-beta.2",
+    "browser-sync": "^2.18.13",
+    "gulp": "github:gulpjs/gulp#4.0",
+    "gulp-load-plugins": "^1.5.0"
   }
 }
