--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "bootstrap": "^4.0.0-beta.2",
     "browser-sync": "^2.18.13",
     "gulp": "github:gulpjs/gulp#4.0",
-    "gulp-load-plugins": "^1.5.0"
+    "gulp-load-plugins": "^1.5.0",
+    "jquery": "^3.2.1"
   }
 }
